--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,11 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.3",
+    "foundation": "~5.5.1",
+    "fontawesome": "~4.3.0",
+    "magnific-popup": "~1.0.0",
+    "slick-carousel": "~1.5.0"
   },
   "authors": [
     "ascottmccauley <scott@ascottmccauley.com>"
