--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,12 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.4",
+    "fullpage.js": "~2.6.5",
+    "normalize-scss": "~3.0.3",
+    "jQuery.mmenu": "~5.2.0",
+    "sass-burger": "~1.2.0",
+    "vibrant": "*"
   },
   "authors": [
     "ascottmccauley <scott@ascottmccauley.com>"
@@ -21,5 +26,8 @@
     "WordPress"
   ],
   "license": "MIT",
-  "private": true
+  "private": true,
+  "resolutions": {
+    "jquery": "~2.1.4"
+  }
 }
