--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "gulp-autoprefixer": "^2.0.0",
     "gulp-clip-empty-files": "^0.1.1",
     "gulp-concat": "^2.4.2",
+    "gulp-concat-css": "^2.2.0",
     "gulp-filter": "^1.0.2",
     "gulp-flatten": "0.0.4",
     "gulp-imagemin": "^2.0.0",
+    "gulp-import-css": "^0.1.2",
     "gulp-install": "^0.2.0",
     "gulp-jshint": "^1.9.0",
     "gulp-load-plugins": "^0.8.0",
