--- a/bower.json
+++ b/bower.json
@@ -15,10 +15,14 @@
     "fontawesome": "~4.3.0",
     "foundation": "~5.5.1",
     "jquery": "~2.1.3",
+    "jquery-zoom": "~1.7.20",
     "magnific-popup": "~1.0.0",
     "respond": "~1.4.2",
     "sass-burger": "~1.1.1",
-    "slick-carousel": "~1.5.0"
+    "slick-carousel": "~1.5.0",
+    "jszip": "^3.1.3",
+    "file-saver": "^1.3.3",
+    "jszip-utils": "^0.0.2"
   },
   "authors": [
     "ascottmccauley <scott@ascottmccauley.com>"
