--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.0.2",
     "gulp-watch": "^3.0.0",
+    "jshint-stylish": "^2.2.1",
     "main-bower-files": "^2.4.1"
   }
 }
