--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "author": "A. Scott McCauley",
   "private": true,
   "devDependencies": {
-    "bower": "^1.3.12",
+    "bower": "^1.8.2",
     "del": "^1.1.0",
     "gulp": "^3.8.10",
     "gulp-add-src": "^0.2.0",
     "gulp-autoprefixer": "^2.0.0",
+    "gulp-clean-css": "^3.9.2",
     "gulp-clip-empty-files": "^0.1.1",
     "gulp-concat": "^2.4.2",
     "gulp-filter": "^1.0.2",
@@ -24,9 +25,11 @@
     "gulp-print": "^1.1.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^1.0.2",
     "gulp-watch": "^3.0.0",
     "jshint-stylish": "^2.2.1",
     "main-bower-files": "^2.4.1"
-  }
+  },
+  "dependencies": {}
 }
